--- a/microservice-paiement.properties
+++ b/microservice-paiement.properties
@@ -1,5 +1,5 @@
 
-server.port 9003
+server.port=9003
 
 #Configurations H2
 spring.jpa.show-sql=true
@@ -7,3 +7,6 @@ spring.h2.console.enabled=true
 
 #défini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF-8
+
+#Eureka
+eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
